# github_actions_cicd

./: .gitleaks.toml  README.md  data.py  gitleaks.toml  isort.cfg  pre-commit.yml  pyproject.toml  requirements.txt
.github/: workflow_config.yml
.github/workflows/: main.yml
Chapter 10/workflows/: event-communicate-release.yml
Chapter 14/My.GitHubOrg/: index.html
Chapter 14/My.GitHubOrg/scripts/: index.js
Chapter 14/My.GitHubOrg/styles/: global.css
Chapter 3/.github/workflows/: gha.workflows.build-node-composite.yml  reusable-build-node.yml
Chapter 4/.github/workflows/: build-code-linter-js.yml
Chapter 6/.github/actions/build-node/: action.yml
Chapter 6/hashicorp/: policy.hcl
Chapter 7/GHA.Private.Templates/.github/actions/build-node/: action.yml
Chapter 7/GHA.Private.Templates/.github/workflows/: gha.workflows.cicd.build-node-deploy-aci-oidc.yml  reusable-workflow-implementation
Chapter 7/infra/: acr.bicep  containerGroups.bicep  resourceGroup.bicep
Chapter 7/nodeapp/: Dockerfile  server.js
Chapter 7/nodeapp/.github/actions/build-node/: action.yml
Chapter 7/nodeapp/.github/workflows/: build-docker-image-run.yml
Chapter 7/nodeapp/__test__/: index.test.js
Chapter 7/nodeapp/infra/: main.bicep
Chapter 8/scratchpad/.github/workflows/: build-create-check-in-step-part-two.yml  build-create-check-with-no-success.yml
Chapter 9/GHA.Private.Templates/.github/workflows/: gha.workflows.cicd.build-node-deploy-aci-check-result-oidc.yml
tests/: api.py  bad_cod.py  pyspark.py  run_python.py  tedt.py  test.py  test_my_module.py
