[tool.poetry]
name = "master"
version = "1.0"
description = "test cicd"
authors = ["Lukasz <ksz.sawa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.10"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[flake8]
max-line-length = 88
ignore = E203, E266, E501, W503
exclude = .git, __pycache__, build, dist